# note

./: .ycm_extra_conf.py  CMakeLists.txt  change.glade  compile_commands.json  data.h  main.cpp  window_types.hpp
header/: core.h  core_dispatcher.h  database.h  dispatcher.h  edit_window.hpp  grid.h  line.h  main_window.h  mainwindow.h  page.h  page_factory.h  page_saver.h  row.h  window.h  window_manager.hpp
interface/: component.h  component_event.h  core.h  core_dispatcher.h  core_event.h  database.h  dispatcher.h  event.h  page.h  visit.h  visitor.h  window.h  window_manager.hpp
resource/: change.glade  edit.glade  main.glade  main.glade~
resource/db/: note.db
resource/style/: edit.css  entry_border.css  main.css
src/: block.cpp  core.cpp  core_dispatcher.cpp  database.cpp  dispatcher.cpp  edit_window.cpp  grid.cpp  line.cpp  main_window.cpp  mainwindow.cpp  page.cpp  page_factory.cpp  page_saver.cpp  row.cpp  window.cpp  window_manager.cpp
